--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_URI=mongodb+srv://<user>:<password>@cluster0.el1az7t.mongodb.net/<db_name>?retryWrites=true&w=majority
+DB_URI=mongodb+srv://admin:qwerty123@cluster0.el1az7t.mongodb.net/users_db?retryWrites=true&w=majority
